# compiler-offline-judge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  run.py  setup.py
Judge/: Build.cpp  Build.h  Test.cpp  Test.h  TestCase.cpp  TestCase.h  main.cpp  update_testcases.py
TestCases/: download.py  testcase_506.txt  testcase_507.txt  testcase_508.txt  testcase_510.txt  testcase_511.txt  testcase_512.txt  testcase_513.txt  testcase_514.txt  testcase_515.txt  testcase_516.txt  testcase_517.txt  testcase_519.txt  testcase_520.txt  testcase_521.txt  testcase_522.txt  testcase_526.txt  testcase_528.txt  testcase_529.txt  testcase_530.txt  testcase_531.txt  testcase_532.txt  testcase_534.txt  testcase_535.txt  testcase_536.txt  testcase_537.txt  testcase_538.txt  testcase_539.txt  testcase_540.txt  testcase_541.txt  testcase_542.txt  testcase_543.txt  testcase_545.txt  testcase_546.txt  testcase_547.txt  testcase_548.txt  testcase_549.txt  testcase_550.txt  testcase_551.txt  testcase_553.txt  (+113 more)
cases/cases/: testcase_509.txt  testcase_523.txt  testcase_524.txt  testcase_525.txt  testcase_527.txt  testcase_533.txt  testcase_544.txt  testcase_552.txt  testcase_555.txt  testcase_556.txt  testcase_559.txt  testcase_563.txt  testcase_564.txt  testcase_565.txt  testcase_566.txt  testcase_568.txt  testcase_570.txt  testcase_573.txt  testcase_575.txt  testcase_577.txt  testcase_578.txt  testcase_579.txt  (+159 more)
compiler_oj/: __init__.py  assembly.py  codegen_test.py  command_line.py  semantic_test.py  testcase.py
doc/: sample_config.json
script/: download.py
(+2 files in other folders)
